Fix adaptation overflow

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -86,6 +86,19 @@
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
+@media  (max-width: 1300px) {
+  .hero__container {
+    max-width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .hero__glass-container {
+    width: 90vw;
+    /* margin: 0; */
+    left: 0;
+  }
+}
+
 @media  (max-width: 1000px) {
   .hero__glass-container {
     font-size: 3em;
