--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Rubik';
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .glass-bg {
